# split-gvcf

./: chrom_sizes.txt  devel_in_container.py  pyproject.toml  uv_run_in_container.py
container/: Containerfile
src/split_gvcf/: __init__.py  gvcf_parser.py  ranges_operations.py  ranges_union.py  split_genome.py  split_genome_avoiding_vars.py
test/: test_gvcf_parser.py  test_ranges_operations.py  test_ranges_union.py  test_split_in_empty_loci.py  test_splitter_bin.py
